Switched to RELU activation function

--- a/NeuralBotConsole/NeuralBotConsole.csproj
+++ b/NeuralBotConsole/NeuralBotConsole.csproj
@@ -82,7 +82,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomNeuralNet.cs" />
+    <Compile Include="fitFuncAdaptable.cs" />
     <Compile Include="FitFunc.cs" />
+    <Compile Include="NetworkType.cs" />
+    <Compile Include="MyNeuralNet.cs" />
     <Compile Include="NeuroEvolveBot.cs" />
     <Compile Include="NeuralBot.cs" />
     <Compile Include="NeuralNetwork.cs" />
