--- a/NeuralBotConsole/NeuralBotConsole.csproj
+++ b/NeuralBotConsole/NeuralBotConsole.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomNeuralNet.cs" />
+    <Compile Include="FileHandler.cs" />
     <Compile Include="fitFuncAdaptable.cs" />
     <Compile Include="FitFunc.cs" />
     <Compile Include="NetworkType.cs" />
